--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
       font-weight: 900;
       font-variant-numeric: tabular-nums;
       white-space: nowrap;
-      display: none; /* hide % change (user preference) */
+      display: inline-flex; /* show % change next to current price */
     }
     .core-change.up{ color: var(--red); }
     .core-change.down{ color: var(--green-deep); }
